# sierra-sample-project

./: .gitignore  CMakeLists.txt  README.md  README.rst
argos/: CMakeLists.txt
argos/include/: foraging_loop_functions.h
argos/src/: foraging_loop_functions.cpp  foraging_qt_user_functions.cpp
exp/: template.argos
exp/argos/: standalone.argos  template.argos
exp/jsonsim/: template.json
exp/ros/: turtlebot3_real.launch  turtlebot3_sim.launch
exp/ros1gazebo/: turtlebot3_house.launch
exp/ros1robot/: turtlebot3.launch
exp/rosgazebo/: turtlebot3_house.launch
exp/yamlsim/: template.yaml
plugins/jsonsim/: cmdline.py  jsonsim.py  plugin.py  plugin2.py
plugins/jsonsim/generators/: engine.py  platform.py
plugins/jsonsim/variables/: exp_setup.py
plugins/platform/jsonsim/: cmdline.py  jsonsim.py  plugin.py
plugins/platform/jsonsim/generators/: platform.py
plugins/platform/jsonsim/variables/: exp_setup.py
plugins/yamlsim/: __init__.py  cmdline.py  plugin2.py  yamlsim.py
plugins/yamlsim/generators/: engine.py
plugins/yamlsim/variables/: exp_setup.py
project/argos_project/config/: controllers.yaml  inter-graphs-line.yaml
project/ros_project/: cmdline.py
project/ros_project/config/: controllers.yaml  perf.yaml
project/ros_project/generators/: exp_generators.py
project/rosgazebo_project/: cmdline.py
project/rosgazebo_project/config/: controllers.yaml  main.yaml
project/rosgazebo_project/generators/: scenario_generator_parser.py  scenario_generators.py
project/rosrobot_project/: cmdline.py
project/rosrobot_project/config/: controllers.yaml
project/rosrobot_project/generators/: exp_generators.py  scenario_generator_parser.py  scenario_generators.py
project/sample_project/: cmdline.py
project/sample_project/config/: controllers.yaml  intra-graphs-line.yaml  main.yaml
project/sample_project/generators/: exp_generators.py  scenario_generator_parser.py  scenario_generators.py
projects/argos_project/: cmdline.py
projects/argos_project/config/: controllers.yaml  graphs.yaml  inter-graphs-hm.yaml  inter-graphs-line.yaml  intra-graphs-hm.yaml  stage5.yaml
projects/argos_project/generators/: exp_generators.py  experiment.py  scenario.py  scenario_generators.py
projects/argos_project/variables/: max_speed.py
projects/jsonsim_project/: cmdline.py
projects/jsonsim_project/config/: controllers.yaml  graphs.yaml  inter-graphs-line.yaml  intra-graphs-hm.yaml  intra-graphs-line.yaml  perf.yaml  stage5.yaml
projects/jsonsim_project/generators/: experiment.py  scenario.py
projects/jsonsim_project/variables/: max_speed.py
projects/ros1gazebo_project/: cmdline.py
projects/ros1gazebo_project/config/: controllers.yaml  main.yaml
projects/ros1gazebo_project/generators/: exp_generators.py  experiment.py  scenario.py  scenario_generators.py
projects/ros1gazebo_project/variables/: max_speed.py
projects/ros1robot_project/: cmdline.py
projects/ros1robot_project/generators/: exp_generators.py  experiment.py  scenario.py  scenario_generator_parser.py  scenario_generators.py
projects/sample_argos/: cmdline.py
projects/sample_argos/config/: collate.yaml  controllers.yaml  graphs.yaml  main.yaml  perf.yaml  stage5.yaml
projects/sample_argos/generators/: experiment.py  scenario.py
projects/sample_argos/variables/: max_speed.py
projects/sample_jsonsim/: cmdline.py
projects/sample_jsonsim/config/: controllers.yaml  graphs.yaml  main.yaml  perf.yaml
projects/sample_jsonsim/generators/: experiment.py  scenario.py
projects/sample_jsonsim/models/: __init__.py  noise.py
projects/sample_jsonsim/variables/: fuel.py  max_speed.py
projects/sample_ros1gazebo/: __init__.py  cmdline.py
projects/sample_ros1gazebo/generators/: experiment.py  scenario.py
projects/sample_ros1gazebo/variables/: max_speed.py
projects/sample_ros1robot/: cmdline.py  project.py
projects/sample_ros1robot/config/: controllers.yaml  main.yaml
projects/sample_ros1robot/generators/: experiment.py  scenario.py
projects/sample_yamlsim/: __init__.py  cmdline.py
projects/sample_yamlsim/config/: collate.yaml  controllers.yaml  graphs.yaml  models.yaml
projects/sample_yamlsim/generators/: experiment.py  scenario.py
projects/sample_yamlsim/variables/: noise_floor.py  tolerance.py
rosgazebo/src/turtlebot3_gazebo/: package.xml
